	Updated Dutch translation :)
	Fixed some bugs

==Beta4==
	Totally a windows update :)
	Windows exe updated
	Some bugs fixed related to Compiling
	Anything using Python as an external command now works.
	Windows (.exe) utilities added
	Some typos fixed
	Some bugs I don't remember

==Beta5==
	Build from Source: You can now add source files without having to edit the SA.py to use them properly
	Some small enhancements
	Windows fix (try if Re-Compiling works now please)
	Build from Source fix
	Update fix
	Added refresh button (Decompiling, ExPackage)
	Auto-refresh after decompile / extract
	Build fix
	added Toro  to devices

==Beta6==
	Added Optimize Images inside APK (Ablzankin)

	Tasklist:
		Finish BinaryPort
		Support [De]Odexing for single apps (not selecting a complete ROM)
		When every single bug is fixed, AromaMenu will get defined.

==Beta7==
	Some os.path improvements
	exit if path contains spaces
	Relative directories with os.path instead of + /APK/IN etc
	Added python directory to info screen
	ScriptDir fixed.
	MyFile fixed
	More verbose again
	Only give Device Dialog when device is not pre-chosen
	Source files updated: only the ones who differ get overwritten
	Updated sourcefiles ^^
	StudioLinux is not a compiled Python script anymore, but a compiled C script (converted from bash). This should fix some errors.
	Recompiling on windows fixed! (KeitIG helped a lot with testing!)
	Before any output, print ### Thursday 16 Sep - 16.21.11 ### (log divider)
	New Windows EXE

==Beta8==
	Warning if no images inside APK/IN
	the callback now searches if the option is defined and runs it without the if: func() syntax.
	added Android tab with 2 functions
	Adb FileManager defined :) 
	ADB: push, pull, list, browse, previous, refresh
	Configure ADB:
		Connect to device via IP
	Added Backup/Restore functionality
	


I will switch to BETAs when every option is defined
Feature requests are always welcome :)
Also, if you want to contribute, don't hestitate to contact me!